--- a/html/gal.html
+++ b/html/gal.html
@@ -25,29 +25,29 @@
         <p>Can accomodate 80 people , Well furnished hall with 5 seater bench , Dais and Whiteboard</p>
       </div>
 
-  <form class="f1">    
+  <form class="f1" id="f1">    
       <div class="facility">
         <h3>FACILITIES</h3>
       
         <label class="custom-checkbox">
-          <input name="dummy" type="checkbox">
+          <input name="Projector" type="checkbox">
          <span class="checkmark"></span> <span class="fac">Projector</span>
         </label>
         <label class="custom-checkbox">
-          <input name="dummy" type="checkbox">
+          <input name="Speaker connection" type="checkbox">
          <span class="checkmark"></span> <span class="fac">Speaker connection</span>
         </label>
         </div>
 <div class="datetime">
     <div class="date">
       <h3>ENTRY</h3>
-      <input type="date" class="d" name="checkin" placeholder="dd-mm-yy">
-      <input type="time" class="t" name="intime"  placeholder="hh:mm">
+      <input type="date" class="d" id="entryd" name="checkin" placeholder="dd-mm-yy">
+      <input type="time" class="t" id="entryt" name="intime"  placeholder="hh:mm">
     </div>
     <div class="date">
       <h3>EXIT</h3>
-      <input type="date"class="d" name="checkout" placeholder="dd-mm-yy">
-      <input type="time" class="t" name="exittime"  placeholder="hh:mm">
+      <input type="date"class="d" id="exitd" name="checkout" placeholder="dd-mm-yy">
+      <input type="time" class="t" id="exitt" name="exittime"  placeholder="hh:mm">
     </div>
   </div>
 
@@ -57,5 +57,6 @@
   </div>
 </form> 
       <script src="conf.js"></script>
+      <script type="module" src="gal.js"></script>
 </body>
 </html>
