--- a/html/conf/confform.html
+++ b/html/conf/confform.html
@@ -12,14 +12,7 @@
         <h3>REGISTRATION DETAILS</h3>
     </div>
     <form class="f1" id="registration">
-        <!-- <div class="row">
-
-            <div class="col">
-                <h4>ROOM NAME</h4>
-                <input type="text" name="room" id="room" value="">
-            </div>
-        </div> -->
-
+ 
         <div class="row">
 
             <div class="col">
@@ -37,6 +30,15 @@
             </div>
 
         </div>
+
+        <div class="row">
+
+            <div class="col">
+                <h4>FACILITIES</h4>
+                <input type="text" name="fac" id="fac" value="">
+            </div>
+        </div>
+
 
         <div class="row">
 
@@ -93,8 +95,8 @@
                
         </button>
     </form>
-    <script type="module" src="semifirebase.js"></script>
-    <script src="semiform.js"></script>
+    <script type="module" src="conffirebase.js"></script>
+    <script src="confform.js"></script>
 
 </body>
 </html>
