--- a/html/gal/gal.html
+++ b/html/gal/gal.html
@@ -26,18 +26,18 @@
       </div>
 
   <form class="f1" id="f1">    
-      <div class="facility">
-        <h3>FACILITIES</h3>
-      
-        <label class="custom-checkbox">
-          <input name="Projector" type="checkbox">
-         <span class="checkmark"></span> <span class="fac">Projector</span>
-        </label>
-        <label class="custom-checkbox">
-          <input name="Speaker connection" type="checkbox">
-         <span class="checkmark"></span> <span class="fac">Speaker connection</span>
-        </label>
-        </div>
+    <div class="facility">
+      <h3>FACILITIES</h3>
+    
+      <label class="custom-checkbox">
+        <input name="Projector" type="checkbox" class="myCheckbox" >
+       <span class="checkmark" id="check1"></span> <span class="fac">Projector</span>
+      </label>
+      <label class="custom-checkbox">
+        <input name="Speaker connection" type="checkbox" class="myCheckbox" id="check2">
+       <span class="checkmark"></span> <span class="fac">Speaker connection</span>
+      </label>
+      </div>
 <div class="datetime">
     <div class="date">
       <h3>ENTRY</h3>
