--- a/html/gal/galform.html
+++ b/html/gal/galform.html
@@ -12,13 +12,6 @@
         <h3>REGISTRATION DETAILS</h3>
     </div>
     <form class="f1" id="registration">
-        <!-- <div class="row">
-
-            <div class="col">
-                <h4>ROOM NAME</h4>
-                <input type="text" name="room" id="room" value="">
-            </div>
-        </div> -->
 
         <div class="row">
 
@@ -36,6 +29,15 @@
 
             </div>
 
+        </div>
+
+        
+        <div class="row">
+
+            <div class="col">
+                <h4>FACILITIES</h4>
+                <input type="text" name="fac" id="fac" value="">
+            </div>
         </div>
 
         <div class="row">
