--- a/html/audi/audi.html
+++ b/html/audi/audi.html
@@ -25,31 +25,32 @@
         <p>Can accomodate 200 people , Well furnished hall with 2 floor individual seating , air-conditioned and spacious dais </p>
       </div>
 
-  <form class="f1" id="f1">    
-      <div class="facility">
-        <h3>FACILITIES</h3>
+  <form class="f1" id="f1"> 
+    <div class="facility">
+    <h3>FACILITIES</h3>
       
-        <label class="custom-checkbox">
-          <input name="Projector" type="checkbox">
-         <span class="checkmark"></span> <span class="fac">Projector</span>
-        </label>
-        <label class="custom-checkbox">
-          <input name="Speaker connection" type="checkbox">
-         <span class="checkmark"></span> <span class="fac">Speaker connection</span>
-        </label>
-        <label class="custom-checkbox">
-          <input name="Mic" type="checkbox">
-         <span class="checkmark"></span> <span class="fac">Mic</span>
-        </label>
-        <label class="custom-checkbox">
-          <input name="Air Condition" type="checkbox">
-         <span class="checkmark"></span> <span class="fac">Air Condition</span>
-        </label>
-        <label class="custom-checkbox">
-            <input name="Balcony Seating" type="checkbox">
-           <span class="checkmark"></span> <span class="fac">Balcony Seating</span>
-          </label>
-        </div>
+    <label class="custom-checkbox">
+      <input name="Projector" type="checkbox" class="myCheckbox" >
+     <span class="checkmark" id="check1"></span> <span class="fac">Projector</span>
+    </label>
+    <label class="custom-checkbox">
+      <input name="Speaker connection" type="checkbox" class="myCheckbox" id="check2">
+     <span class="checkmark"></span> <span class="fac">Speaker connection</span>
+    </label>
+    <label class="custom-checkbox">
+      <input name="Mic" type="checkbox" class="myCheckbox" id="check3">
+     <span class="checkmark"></span> <span class="fac">Mic</span>
+    </label>
+    <label class="custom-checkbox">
+      <input name="Air Condition" type="checkbox" class="myCheckbox" id="check4">
+     <span class="checkmark"></span> <span class="fac">Air Condition</span>
+    </label>
+    <label class="custom-checkbox">
+      <input name="Balcony Seating" type="checkbox" class="myCheckbox" id="check4">
+     <span class="checkmark"></span> <span class="fac">Balcony Seating</span>
+    </label>
+    </div>
+
 <div class="datetime">
     <div class="date">
       <h3>ENTRY</h3>
