--- a/html/audi/audiform.html
+++ b/html/audi/audiform.html
@@ -9,16 +9,10 @@
 <body>
     <div class="topbar">
         <img src="assets\eventspace-favicon-white.png" id="logo">
-        <h3>REGISTRATION DETAILS</h3>
+    <h3>REGISTRATION DETAILS</h3>
+        
     </div>
     <form class="f1" id="registration">
-        <!-- <div class="row">
-
-            <div class="col">
-                <h4>ROOM NAME</h4>
-                <input type="text" name="room" id="room" value="">
-            </div>
-        </div> -->
 
         <div class="row">
 
@@ -36,6 +30,14 @@
 
             </div>
 
+        </div>
+
+        <div class="row">
+
+            <div class="col">
+                <h4>FACILITIES</h4>
+                <input type="text" name="fac" id="fac" value="">
+            </div>
         </div>
 
         <div class="row">
