--- a/html/semi/semiform.html
+++ b/html/semi/semiform.html
@@ -37,6 +37,14 @@
             </div>
 
         </div>
+        
+        <div class="row">
+
+            <div class="col">
+                <h4>FACILITIES</h4>
+                <input type="text" name="fac" id="fac" value="">
+            </div>
+        </div>
 
         <div class="row">
 
@@ -93,8 +101,8 @@
                
         </button>
     </form>
-    <script type="module" src="conffirebase.js"></script>
-    <script src="confform.js"></script>
+    <script type="module" src="semifirebase.js"></script>
+    <script src="semiform.js"></script>
 
 </body>
 </html>
