--- a/html/booking/booking.html
+++ b/html/booking/booking.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="topbar">
-        <a href="#"><p>Logout</p></a> 
+        <a href="D:\github\EventSpace\html\index.html"><p>Logout</p></a> 
         <img src="assets\eventspace-favicon-white.png" id="logo">
     <h3>BOOKING DETAILS</h3>
 
