--- a/html/audi/audiform.html
+++ b/html/audi/audiform.html
@@ -43,6 +43,14 @@
         <div class="row">
 
             <div class="col">
+                <h4>EVENT NAME & DETAILS</h4>
+                <input type="text" name="fac" id="event" value="">
+            </div>
+        </div>
+
+        <div class="row">
+
+            <div class="col">
                 <h4>DEPARTMENT NAME</h4>
                 <input type="text" name="dept" id="dept" value="">
             </div>
