--- a/html/booking/booking.html
+++ b/html/booking/booking.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="topbar">
-        <a href="D:\github\EventSpace\html\index.html"><p>Logout</p></a> 
+        <a href="D:\github\EventSpace\html\index.html"><p id="logout">Logout</p></a> 
         <img src="assets\eventspace-favicon-white.png" id="logo">
     <h3>BOOKING DETAILS</h3>
 
@@ -48,7 +48,8 @@
     </button>
     </div>
 
-    <div id="contentDisplay"></div>
+    <div id="contentDisplay">
+    </div>
     </div>
 
     <script type="module" src="booking.js">
