--- a/html/conf/confform.html
+++ b/html/conf/confform.html
@@ -39,6 +39,13 @@
             </div>
         </div>
 
+        <div class="row">
+
+            <div class="col">
+                <h4>EVENT NAME & DETAILS</h4>
+                <input type="text" name="fac" id="event" value="">
+            </div>
+        </div>
 
         <div class="row">
 
