--- a/html/booking/booking.html
+++ b/html/booking/booking.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="topbar">
-        <a href="D:\github\EventSpace\html\index.html"><p id="logout">Logout</p></a> 
+        
         <img src="assets\eventspace-favicon-white.png" id="logo">
     <h3>BOOKING DETAILS</h3>
-
+    <button id="logout">Logout</button>
           
     </div>
     <div class="max">
