--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
         </div>
         <ul class="navlist">
            
-            <li><a href="index.html" style="color: white;">Home</a></li>
+            <li><a href="confirm.html" style="color: white;">Status</a></li>
             <li><a href="booking/login.html" style="color: white;">Login</a></li>
            
         </ul>
