--- a/html/login.html
+++ b/html/login.html
@@ -11,6 +11,7 @@
     <div class="topbar">
         <img src="assets\eventspace-favicon-white.png" id="logo">
         <h3>EVENTSPACE</h3>
+        <a href="index.html"><button id="logout">home</button></a>
     </div>
 
 <div class="card">
