--- a/html/audi/audi.html
+++ b/html/audi/audi.html
@@ -10,8 +10,8 @@
     <div class="container">
         <button class="prev-btn" onclick="goPrev()">&lt;</button>
         <div class="slider">
-          <img src="assets\audi n 1.png" class="slide">
-          <img src="assets\audi n 2.png" class="slide">
+          <img src="assets/auditorium 01.png" class="slide">
+          <img src="assets/auditorium 02.png 02.png" class="slide">
           <!-- <img src="image3.jpg" alt="Image 3"> -->
         </div>
         <div class="title">
