--- a/html/conf/conf.html
+++ b/html/conf/conf.html
@@ -10,8 +10,8 @@
     <div class="container">
         <button class="prev-btn" onclick="goPrev()">&lt;</button>
         <div class="slider">
-          <img src="assets\con f 1.png" class="slide">
-          <img src="assets\con f 2.png" class="slide">
+          <img src="assets/conference - 01.png" class="slide">
+          <img src="assets/conference - 02.png" class="slide">
           <!-- <img src="image3.jpg" alt="Image 3"> -->
         </div>
         <div class="title">
