--- a/html/gal/gal.html
+++ b/html/gal/gal.html
@@ -10,8 +10,8 @@
     <div class="container">
         <button class="prev-btn" onclick="goPrev()">&lt;</button>
         <div class="slider">
-          <img src="assets\gal n1.png" class="slide">
-          <img src="assets\gal n 2.png" class="slide">
+          <img src="assets\galeria 01.png" class="slide">
+          <img src="assets\galeria 02.png" class="slide">
           <!-- <img src="image3.jpg" alt="Image 3"> -->
         </div>
         <div class="title">
