--- a/html/semi/semi.html
+++ b/html/semi/semi.html
@@ -10,8 +10,8 @@
     <div class="container">
         <button class="prev-btn" onclick="goPrev()">&lt;</button>
         <div class="slider">
-          <img src="assets\av n 1.png" class="slide">
-          <img src="assets\av n 2.png" class="slide">
+          <img src="assets\seminar 01.png" class="slide">
+          <img src="assets\seminar 02.png" class="slide">
           <!-- <img src="image3.jpg" alt="Image 3"> -->
         </div>
         <div class="title">
