--- a/html/index.html
+++ b/html/index.html
@@ -68,6 +68,28 @@
         <p class="tip">Galleria</p>        
     </div></a>
 </div>
+<br>
+<br>
+<div class="foot">
+    <div class="instruct">
+      <h3>INSTRUCTIONS & GUIDELINES</h3>
+      <ul>
+        <li>Book your venue a week prior</li>
+        <li>Check your booking status at the "Status block" on the home page</li>
+        <li>Incase your booking is on hold (neither accepted nor rejected) for more than 3 days contact the respective incharge </li>
+        <li>Handle the given facilities with proper care</li>
+        <li>Keep the venue clean</li>
+        <li>Do not damage the college property</li>
+      </ul>
+      <br><br>
+    </div>
+    <div class="contact">
+      <h3>CONTACT US</h3>
+      <p>Incharge <br>
+      mobile : 1234567890<br>
+      email : <a>example@example.com</a></p><br><br>
+    </div>
+  </div>
 
 <script src="index.js"></script>
 </body>
