--- a/audi/audi.html
+++ b/audi/audi.html
@@ -11,7 +11,7 @@
         <button class="prev-btn" onclick="goPrev()">&lt;</button>
         <div class="slider">
           <img src="assets/auditorium 01.png" class="slide">
-          <img src="assets/auditorium 02.png 02.png" class="slide">
+          <img src="assets/auditorium 02.png" class="slide">
           <!-- <img src="image3.jpg" alt="Image 3"> -->
         </div>
         <div class="title">
